--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        
     - run: npm ci
+      working-directory: ./server
     - run: npm run build --if-present
+      working-directory: ./server
     - run: npm test
+      working-directory: ./server
